--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "license": "ISC",
   "dependencies": {
     "@formkit/tempo": "^0.1.1",
+    "cors": "^2.8.5",
     "date-fns": "^3.6.0",
     "json-server": "^1.0.0-alpha.23"
   }
